Fixing buttons on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,4 @@
+/* Google font imports for react */
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
 
@@ -54,7 +55,8 @@ nav {
     text-align: center;
     font-family: var(--font);
     font-size: 125%;
-    margin-left: -1vw;
+    /* This is off center for some reason */
+    margin-left: -2vw;
 }
 
 ul {
@@ -91,13 +93,13 @@ li {
 
 .icon-links {
     text-align: center;
-    margin-left: 1vw;
 }
 
 .icon-links a {
     font-size: 200%;
     /* Doesn't work, have to code on html: color:rgb(183, 128, 151); */ 
-    margin-right: 2vw;
+    margin-right:1vw;
+    margin-left: 1vw;
 }
 
 /* About */
@@ -140,10 +142,6 @@ li {
     padding-top: 8vh;
     margin-bottom: 5vh;
     font-weight: 100;
-    /* If the image were used:
-    display: block;
-    margin-left: auto;
-    margin-right: auto; */
     color: black;
     text-align: center;
     font-family: "Dancing Script", cursive;
@@ -152,7 +150,6 @@ li {
 }
 
 .grid-container {
-    /* top right bottom left */
     margin: 0vh 3vw;
     padding-bottom: 7vh;
     display: grid;
@@ -176,7 +173,6 @@ li {
 
 
 .capture {
-    /* height: 100%; gives actual height*/
     height: auto;
     margin-bottom: -2px;
     width: 100%;
@@ -252,23 +248,6 @@ li {
     width: 30vw;
     height: 30vh;
 }
-
-/* If I replace the form with contact links */
-/* .contact-section h3 {
-    text-align: left;
-    font-family: var(--font);
-    color: black;
-    font-size: 40px;
-    filter: drop-shadow(1px 1px 1px rgb(88, 86, 86));
-    margin: 10px;
-}
-
-.contact-section p {
-    text-align: center;
-    font-family: var(--font);
-    font-size: 20px;
-    margin: 10px;
-} */
 
 /* Resume */
 .resume-section {
@@ -357,6 +336,10 @@ and (max-width : 440px) {
     }
     .dropdown-item-center {
         padding-left: 21vh;
+    }
+    .icon-links a {
+        margin-right:4vw;
+        margin-left: 4vw;
     }
     .about-section {
         margin-top: 3vh;;
